[tool.poetry]
name = "marin_lab_tools"
version = "0.1.0"
description = ""
authors = ["BrandonThaiTran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
jupyterlab = "^3.0.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
